# space_log_agent

./: AGENTS.md  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  langgraph.json  pyproject.toml
backend/.langgraph_api/: .langgraph_ops.pckl
backend/docs/: incident_graph.mmd
backend/src/space_log_agent/: agent.py  config.py  graph.py  graph_helpers.py  logging_setup.py  main.py  models.py  runtime.py  sgr_patches.py
backend/src/space_log_agent/api/: app.py  dependencies.py  routes.py  run_manager.py  schemas.py  service.py
backend/src/space_log_agent/prompts/: classification_system.txt  deep_system.txt  deep_user.txt
backend/src/space_log_agent/tools/deep_research/: incident_tools.py
backend/src/space_log_agent/tools/pre_hooks/: anomaly_rules.py  features.py  incident_envelope.py  orbit_track.py  scenario_injection.py  telemetry_loader.py  tle_tools.py  uv_post_hook.py
backend/src/space_log_agent/window_history/: __init__.py  history_utils.py
backend/tests/: test_anomaly_rules.py  test_prehook_envelopes.py  test_tle_tools.py  test_window_history.py
data_opssat/: tle_opssat.txt  tle_opssat_2.txt  tm_analysis.ipynb  uhf_telemetry.csv
frontend/: README.md  app.js  index.html  styles.css
logs/: 20260308-235010-space_incident_sgr_6ceb7f4d-3aec-4f23-a825-72f0b282d230-log.json  20260308-235045-space_incident_sgr_4966fbba-d507-47b5-8de0-9f0b838a8dd3-log.json  20260308-235153-space_incident_sgr_1616ee11-7b55-4394-bc82-c3c0c480ef4c-log.json  20260308-235201-space_incident_sgr_73f9cd40-8232-4380-9e37-8f318a2861ea-log.json  (+53 more)
